--- a/bib.bib
+++ b/bib.bib
@@ -1,6 +1,51 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@inproceedings{bhattarai_dynamic_2024,
+	title = {Dynamic {Resource} {Management} for {Elastic} {Scientific} {Workflows} using {PMIx}},
+	doi = {10.1109/IPDPSW63119.2024.00131},
+	abstract = {In current scientific workflows, the computational needs of tasks might not be known when it is submitted to a system for execution. Current resource management (RM) systems and workflow managers (WFMs) provide limited support for dynamic resource allocation in HPC systems, thus the common approach is to request the maximum resources needed for a maximum time, potentially wasting resources. However, in some cases, maximum resources may not be estimated a priori, as a result, a workflow may be completed after the deadline, or in cases, the task may terminated by the resource manager. A combination of workflow manager and resource management system that can accommodate a fine-grain elastic resource allocation during the execution of a workflow would alleviate this problem. This paper presents a dynamic elastic resource management framework based on the Parsl workflow manager and PMIx-enabled SLURM and reports the early evaluation of the framework using two workflow applications.},
+	language = {en},
+	urldate = {2025-04-22},
+	booktitle = {2024 {IEEE} {International} {Parallel} and {Distributed} {Processing} {Symposium} {Workshops} ({IPDPSW})},
+	author = {Bhattarai, Rajat and Pritchard, Howard and Ghafoor, Sheikh},
+	year = {2024},
+}
+
+@phdthesis{iserte_agut_high-throughput_2018,
+	type = {Ph.{D}. {Thesis}},
+	title = {High-throughput {Computation} through {Efficient} {Resource} {Management}},
+	copyright = {Open Access},
+	abstract = {This proposal addresses, from two different approaches, the improvement of data centers productivity through an efficient resource management. On the one hand, the combination of GPU remote virtualization technologies with workload managers in HPC clusters and cloud computing environments. On the other hand, job reconfigurations in terms of varying its number of processes during the execution. Performance evaluations reveal a non-negligible improvement not only in the throughput, but also, in the job waiting time and in the energy consumption.},
+	language = {eng},
+	urldate = {2025-08-07},
+	school = {Universitat Jaume I},
+	author = {Iserte Agut, Sergio},
+	month = nov,
+	year = {2018},
+	doi = {10.6035/14101.2018.176272},
+	note = {Accepted: 2018-12-05T10:00:25Z
+Publication Title: TDX (Tesis Doctorals en Xarxa)},
+	keywords = {004, GPU Virtualization, Job Reconfiguration, Process Malleability, Resource Management, Tecnologies de la informació i les comunicacions (TIC)},
+	file = {Full Text PDF:C\:\\Users\\siser\\Zotero\\storage\\ANJGGQBH\\Iserte Agut - 2018 - High-throughput Computation through Efficient Resource Management.pdf:application/pdf},
+}
+
+@inproceedings{10.1145/3555819.3555856,
+author = {Huber, Dominik and Streubel, Maximilian and Compr\'{e}s, Isa\'{\i}as and Schulz, Martin and Schreiber, Martin and Pritchard, Howard},
+title = {Towards Dynamic Resource Management with MPI Sessions and PMIx},
+year = {2022},
+isbn = {9781450397995},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+doi = {10.1145/3555819.3555856},
+abstract = {Job management software on peta- and exascale supercomputers continues to provide static resource allocations, from a program’s start until its end. Dynamic resource allocation and management is a research direction that has the potential to improve the efficiency of HPC systems and applications by dynamically adapting the resources of an application during its runtime. Resources can be adapted based on past, current or even future system conditions and matching optimization targets. However, the implementation of dynamic resource management is challenging as it requires support across many layers of the software stack, including the programming model. In this paper, we focus on the latter and present our approach to extend MPI Sessions to support dynamic resource allocations within MPI applications. While some forms of dynamicity already exist in MPI, it is currently limited by requiring global synchronization, being application or application-domain specific, or by suffering from limited support in current HPC system software stacks. We overcome these limitations with a simple, yet powerful abstraction: resources as process sets, and changes of resources as set operations leading to a graph-based perspective on resource changes. As the main contribution of this work, we provide an implementation of this approach based on MPI Sessions and PMIx. In addition, an illustration of its usage is provided, as well as a discussion about the required extensions of the PMIx standard. We report results based on a prototype implementation with Open MPI using a synthetic application, as well as a PDE solver benchmark on up to four nodes and a total of 112 cores. Overall, our results show the feasibility of our approach, which has only very moderate overheads. We see this first proof-of-concept as an important step towards resource adaptivity based on MPI Sessions.},
+booktitle = {Proceedings of the 29th European MPI Users' Group Meeting},
+pages = {57–67},
+numpages = {11},
+keywords = {malleability, dynamic resources, PMIx, MPI Sessions},
+location = {Chattanooga, TN, USA},
+series = {EuroMPI/USA '22}
+}
 
 @article{tarraf_malleability_2024,
 	title = {Malleability in {Modern} {HPC} {Systems}: {Current} {Experiences}, {Challenges}, and {Future} {Opportunities}},
