--- a/bib.bib
+++ b/bib.bib
@@ -1,6 +1,15 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@inproceedings{iserte_malleable_2025,
+	address = {Merida, Yucatan, Mexico},
+	title = {Malleable {Computational} {Fluid} {Dynamics} {Simulations}},
+	booktitle = {Proceedings of the 36th {Parallel} {CFD} {International} {Conference}},
+	author = {Iserte, S. and Houzeaux, G. and Sandås, P. and Peña, A. J. and Garcia-Gasulla, M.},
+	month = nov,
+	year = {2025},
+}
+
 @inproceedings{bhattarai_dynamic_2024,
 	title = {Dynamic {Resource} {Management} for {Elastic} {Scientific} {Workflows} using {PMIx}},
 	doi = {10.1109/IPDPSW63119.2024.00131},
