--- a/main.tex
+++ b/main.tex
@@ -138,14 +138,11 @@ High-performance computing (HPC) facilities are critical for advancing scientifi
 These computational clusters rely on efficiently utilizing resources to maximize their productivity. Dynamic resource management (DRM) techniques have emerged as key strategies to improve the utilization of these systems~\cite{bungartz_invasive_2013, garcia_hints_2014, lopez_openmp_2021}. These techniques enable the flexible allocation and reallocation of computational resources and reconfiguring jobs accordingly to adapt to the dynamic nature of HPC workloads.
 Among others, malleability based on the Message-Passing Interface (MPI) is one of the most extended DRM approaches to process layout reshape and data redistribution
 ~\cite{10.1145/3555819.3555856, iserte_agut_high-throughput_2018, martin_flex-mpi_2013, bhattarai_dynamic_2024}.
-%~\cite{martin_flex-mpi_2013, martin-alvarez_proteo_2024, huber_bridging_2025, iserte_resource_2025}.
-%Notably, message-passing interface (MPI) malleability facilitates 1) resource reallocation, 2) process layout reshaping, 3) data redistribution among ranks, and 4) seamless job resumption during runtime. 
-%This flexibility significantly boosts productivity by increasing the number of completed jobs per unit of time and optimizing overall resource utilization.
 
 Despite their potential, DRM techniques face several challenges that hinder their adoption in production environments~\cite{iserte_resource_2025}.
 Particularly, MPI malleability requires 1) a malleability-ready resource management system (RMS), which many existing facilities do not possess, and 2) a malleability framework to develop malleable applications compatible with the RMS and the available distributed parallel runtime systems in the cluster.
 These kinds of limitations increase the complexity of evaluating DRM techniques with realistic workloads and foster skepticism among end users and system administrators regarding DRM's practical benefits and feasibility.
-In this regard, previous studies evaluating DRM techniques have relied on simplistic simulations, biased benchmarks, or synthetic traces, often failing to accurately represent real-world systems' conditions. These analytic workloads do not capture the variability and unpredictability of user behaviors observed in production systems. As a result, researchers in this field have faced challenges in conducting impactful demonstrations that significantly influence the community.
+In this regard, previous studies evaluating DRM techniques have relied on simplistic simulations, biased benchmarks, or synthetic traces, often failing to accurately represent real-world systems' conditions. These analytic workloads do not capture the variability and unpredictability of user behaviors observed in production systems. As a result, researchers in this field have faced challenges in conducting impactful demonstrations that significantly influence the community (more details in Section~\ref{sec:related}).
 
 To address the challenges of evaluating DRM techniques, we propose a novel methodology that leverages supercomputer logs to generate realistic workloads based on actual user submission behaviors, including temporal patterns across hours and days of the week. Our approach introduces a mechanism called the \textit{User-Based Submitter}, designed to scale across different computing clusters. Rather than relying on synthetic simulations, this method replays real user interactions from production supercomputers, enabling a more accurate and comprehensive evaluation of DRM techniques.
 
@@ -356,13 +353,10 @@ Figure~\ref{fig:dmr-slurm} depicts the operation of dynamic resource management 
 \item Finally, the PDR redistributes the data among the processes according to the application's guidelines, allowing jobs to continue execution with the new process layout from the point where the reconfiguration was triggered.
 \end{itemize}
 
-%\begin{figure}
-%    \includegraphics[clip,width=0.8\linewidth,trim={0.1cm 0.0cm 0.1cm 0.1cm}]{figures/dmr-slurm.png}
-%    \caption{DMRlib Application--MPI--Slurm communication.}
-%    \label{fig:dmr-slurm}
-%\end{figure}
+\review{
+DMRlib supports multiple Process Dynamic Runtimes (PDRs), including Nanos++~\cite{iserte_dmr_2018} and several MPI implementations~\cite{iserte_malleable_2025}, and can seamlessly interface with different malleability backends such as Proteo~\cite{martin-alvarez_proteo_2024} and DPP~\cite{huber_bridging_2025}.
+}
 
-%DMRlib is presented in two flavors of PDR: Nanos++ (the OmpSs programming model runtime) and the Message Passing Interface (MPI).
 In this work, DMRlib has been configured with MPICH\footnote{\url{https://www.mpich.org}}, as the PDR, and Slurm\footnote{\url{https://slurm.schedmd.com}} as the RMS~\cite{iserte_towards_2025}.
 DMRlib integrates a monitoring module to track performance metrics during job execution and react accordingly by requesting/suggesting expansion or shrinking actions to the RMS.
 Metrics are gathered by TALP~\cite{lopez_talp_2021}, which collects ``POP metrics''\footnote{\url{https://pop-coe.eu/node/69}}. This set of metrics is organized hierarchically and is multiplicative; that is, the value of the parent metric is equal to the product of the child metrics.
